# DesignModel

./: .gitignore
C++/adapter/ducks/: CMakeLists.txt  Duck.cpp  Duck.h  DuckAdapter.cpp  DuckAdapter.h  MallardDuck.cpp  MallardDuck.h  Turkey.cpp  Turkey.h  TurkeyAdapter.cpp  TurkeyAdapter.h  WildTurkey.cpp  WildTurkey.h  main.cpp
C++/collections/iterator/: CMakeLists.txt  DinerMenu.cpp  DinerMenu.h  DinerMenuIterator.cpp  DinerMenuIterator.h  Iterator.cpp  Iterator.h  Menu.cpp  Menu.h
C++/command/party/: CMakeLists.txt  CeilingFan.cpp  CeilingFan.h  CeilingFanHighCommand.cpp  CeilingFanHighCommand.h  CeilingFanMediumCommand.cpp  CeilingFanMediumCommand.h  CeilingFanOffCommand.cpp  CeilingFanOffCommand.h  Command.cpp  Command.h  Hottub.cpp  Hottub.h  HottubOffCommand.cpp  HottubOffCommand.h  HottubOnCommand.cpp  HottubOnCommand.h  Light.cpp  Light.h  LightOffCommand.cpp  LightOffCommand.h  LightOnCommand.cpp  LightOnCommand.h  LivingroomLightOffCommand.cpp  LivingroomLightOffCommand.h  LivingroomLightOnCommand.cpp  LivingroomLightOnCommand.h  MacroCommand.cpp  MacroCommand.h  NoCommand.cpp  NoCommand.h  RemoteControl.cpp  RemoteControl.h  Stereo.cpp  Stereo.h  StereoOffCommand.cpp  StereoOffCommand.h  StereoOnCommand.cpp  StereoOnCommand.h  StereoOnWithCDCommand.cpp  (+8 more)
C++/decorator/pizza/: CMakeLists.txt  Cheese.cpp  Cheese.h  Olives.cpp  Olives.h  Pizza.h  ThickcrustPizza.cpp  ThickcrustPizza.h  ThincrustPizza.cpp  ThincrustPizza.h  main.cpp  (+2 more)
C++/decorator/starbuzz/: Beverage.cpp  Beverage.h  CMakeLists.txt  CondimentDecorator.cpp  CondimentDecorator.h  DarkRoast.cpp  DarkRoast.h  Decaf.cpp  Decaf.h  Espresso.cpp  Espresso.h  HouseBlend.cpp  HouseBlend.h  Milk.cpp  Milk.h  Mocha.cpp  Mocha.h  Soy.cpp  Soy.h  Whip.cpp  Whip.h  main.cpp
C++/facade/: Amplifier.cpp  Amplifier.h  CMakeLists.txt  CdPlayer.cpp  CdPlayer.h  DvdPlayer.cpp  DvdPlayer.h  HomeTheaterFacade.cpp  HomeTheaterFacade.h  PopcornPopper.cpp  PopcornPopper.h  Projector.cpp  Projector.h  Screen.cpp  Screen.h  TheaterLights.cpp  TheaterLights.h  Tuner.cpp  Tuner.h  main.cpp
C++/factory/challenge/: CMakeLists.txt  Calendar.cpp  Calendar.h  PacificCalendar.cpp  PacificCalendar.h  Zone.cpp  Zone.h  ZoneCentral.cpp  ZoneCentral.h  ZoneEastern.cpp  ZoneEastern.h  ZoneFactory.cpp  ZoneFactory.h  ZoneMountain.cpp  ZoneMountain.h  ZonePacific.cpp  ZonePacific.h  main.cpp
C++/factory/pizzas/: CMakeLists.txt  CheesePizza.cpp  CheesePizza.h  ClamPizza.cpp  ClamPizza.h  PepperoniPizza.cpp  PepperoniPizza.h  Pizza.cpp  Pizza.h  PizzaStore.cpp  PizzaStore.h  SimplePizzaFactory.cpp  SimplePizzaFactory.h  VeggiePizza.cpp  VeggiePizza.h  main.cpp
C++/observer/: CMakeLists.txt  Observer.h  SimpleObserver.cpp  SimpleObserver.h  SimpleSubject.cpp  SimpleSubject.h  Subject.h
C++/observer/weather/: CMakeLists.txt  CurrentConditionsDisplay.cpp  CurrentConditionsDisplay.h  DisplayElement.cpp  DisplayElement.h  ForecastDisplay.cpp  ForecastDisplay.h  HeatIndexDisplay.cpp  HeatIndexDisplay.h  Observer.h  StatisticsDisplay.cpp  StatisticsDisplay.h  Subject.h  WeatherData.cpp  WeatherData.h  main.cpp
C++/strategy/: CMakeLists.txt  DecoyDuck.cpp  DecoyDuck.h  Duck.h  FakeQuack.cpp  FakeQuack.h  FlyBehavior.h  FlyNoWay.cpp  FlyNoWay.h  FlyWithWings.cpp  FlyWithWings.h  MallardDuck.cpp  MallardDuck.h  MuteQuack.cpp  MuteQuack.h  Quack.cpp  Quack.h  QuackBehavior.h  main.cpp
Rust/Factory/: Cargo.toml
Rust/strategy/: Cargo.toml
(+453 files in other folders)
